k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loan-admin
  labels:
    name: loan-admin
    environment: production
